# wf-shell

./: .gitignore  .gitmodules  LICENSE  README.md  config.h.in  meson.build  meson_options.txt  uncrustify.ini  wf-shell.ini.example
.github/workflows/: ci.yaml
data/: meson.build  weather-fetch.py  wf-locker  wf-locker-pin.desktop
data/backgrounds/: calm-blue.README  circuits.README  secret-chest.README  simple.README  snow.README
data/css/: README.md  default.css  meson.build  panel-battery-zoom-hover.css  panel-command-output-small.css  panel-launchers-zoom-hover.css  panel-menu-button-small.css  panel-menu-zoom-hover.css  panel-mixer-dim-mute.css  panel-network-zoom-hover.css  panel-selectors.css  panel-tray-zoom-hover.css  panel-volume-zoom-hover.css  panel-window-list-zoom-hover.css  panel-wp-mixer-defaults.css  panel-wp-mixer-dim-mute.css  user-font.css
data/layouts/: ansi.xml  emoji.xml  ether.xml  iso.xml  numpad.xml
data/xdpw/: wayfire
docs/audio-control/: ARCHITECTURE.md  PLAN.md  SESSION-CONTROL.md  mockup.html
docs/audio-control/tests/: coverage.sh  run_all  test_defaults.py
man/: meson.build  wf-audio-info.1  wf-shell-audio.7
metadata/: background.xml  background.xml.in  dock.xml  locker.xml  meson.build  osk.xml  panel.xml
proto/: ext-image-capture-source-v1.xml  ext-image-copy-capture-v1.xml  input-method-unstable-v2.xml  meson.build  wayfire-shell-unstable-v2.xml  wayfire-shell.xml  wlr-layer-shell-unstable-v1.xml
src/: meson.build
src/background/: background.cpp  background.hpp  meson.build
src/dock/: dock-app.cpp  dock.cpp  dock.hpp  meson.build  toplevel-icon.cpp  toplevel-icon.hpp  toplevel.cpp  toplevel.hpp
src/locker/: locker.cpp  locker.hpp  lockergrid.hpp  lockscreen.cpp  lockscreen.hpp  meson.build  plugin.hpp  timedrevealer.cpp  timedrevealer.hpp
src/locker-pin/: locker-pin.cpp  locker-pin.hpp  meson.build
src/locker/plugin/: battery.cpp  battery.hpp  clock.cpp  clock.hpp  fingerprint.cpp  fingerprint.hpp  instant.cpp  instant.hpp  mpris.cpp  mpris.hpp  network.cpp  network.hpp  password.cpp  password.hpp  pin.cpp  pin.hpp  user.cpp  user.hpp  volume.cpp  volume.hpp  weather.cpp  weather.hpp
src/osk/: display.cpp  display.hpp  layout.cpp  layout.hpp  meson.build  osk.cpp  osk.hpp  virtual-keyboard.cpp  virtual-keyboard.hpp  wayland-window.cpp  wayland-window.hpp
src/osk/complete/: complete-enchant.cpp  complete-enchant.hpp  complete-tiny.cpp  complete-tiny.hpp  complete.hpp
src/panel/: meson.build  panel.cpp  panel.hpp  widget.hpp
src/panel/widgets/: battery.cpp  battery.hpp  clock.cpp  clock.hpp  command-output.cpp  command-output.hpp  customizables.cpp  customizables.hpp  language.cpp  language.hpp  launchers.cpp  launchers.hpp  menu.cpp  menu.hpp  network.cpp  network.hpp  separator.cpp  separator.hpp  spacing.cpp  spacing.hpp  toplevel-icon.cpp  toplevel-icon.hpp  toplevel.cpp  toplevel.hpp  volume-level.cpp  volume-level.hpp  volume.cpp  volume.hpp  weather.cpp  weather.hpp  wf-popover.cpp  wf-popover.hpp  window-list.cpp  window-list.hpp  wireplumber.cpp  wireplumber.hpp  workspace-switcher.cpp  workspace-switcher.hpp
src/panel/widgets/backlight/: backlight.cpp  backlight.hpp  ddcutil.cpp  sysfs.cpp
src/panel/widgets/brightness/: brightness.cpp  brightness.hpp  ddcutil.cpp  sysfs.cpp
src/panel/widgets/light/: ddcutil.cpp  filesystem.cpp  light.cpp  light.hpp  sysfs.cpp
src/panel/widgets/mixer/: mixer-control.cpp  mixer-control.hpp  mixer.cpp  mixer.hpp  wp-common.cpp  wp-common.hpp
src/panel/widgets/notifications/: daemon.cpp  daemon.hpp  notification-center.cpp  notification-center.hpp  notification-info.cpp  notification-info.hpp  single-notification.cpp  single-notification.hpp
src/panel/widgets/tray/: dbusmenu.cpp  dbusmenu.hpp  host.cpp  host.hpp  item.cpp  item.hpp  singleitem.hpp  tray.cpp  tray.hpp  watcher.cpp  watcher.hpp
src/panel/widgets/window-list/: layout.cpp  layout.hpp  toplevel.cpp  toplevel.hpp  window-list.cpp  window-list.hpp
src/panel/widgets/wireplumber/: wf-wp-control.cpp  wf-wp-control.hpp  wireplumber.cpp  wireplumber.hpp  wp-common.cpp  wp-common.hpp
src/panel/widgets/wp-mixer/: wf-wp-control.cpp  wf-wp-control.hpp  wp-common.cpp  wp-common.hpp  wp-mixer.cpp  wp-mixer.hpp
src/stream-chooser/: mainlayout.cpp  mainlayout.hpp  meson.build  outputwidget.cpp  outputwidget.hpp  stream-chooser.cpp  stream-chooser.hpp  toplevellayout.cpp  toplevellayout.hpp  toplevelwidget.cpp  toplevelwidget.hpp
src/util/: animated-scale.cpp  animated-scale.hpp  animated_scale.cpp  animated_scale.hpp  background-gl.cpp  background-gl.hpp  css-config.cpp  css-config.hpp  display.cpp  display.hpp  gtk-utils.cpp  gtk-utils.hpp  icon-select.cpp  icon-select.hpp  icons.cpp  icons.hpp  json.cpp  json.hpp  meson.build  platform.cpp  platform.hpp  power-controller-bsd.cpp  power-controller-linux.cpp  power-controller.cpp  power-controller.hpp  wf-autohide-window.cpp  wf-autohide-window.hpp  wf-ipc.cpp  wf-ipc.hpp  wf-option-wrap.hpp  wf-popover.cpp  wf-popover.hpp  wf-shell-app.cpp  wf-shell-app.hpp
src/util/audio/: audio-backend-builder.cpp  audio-backend-cli.cpp  audio-backend-freebsd.cpp  audio-backend-linux.cpp  audio-backend.hpp  audio-parse.cpp  audio-parse.hpp  audio-process.cpp  audio-process.hpp  audio-types.hpp  volume-logic.hpp
src/util/audio/tests/: test_audio_backend.cpp
src/util/network/: bluetooth.hpp  connection.cpp  connection.hpp  freebsd-backend.cpp  freebsd-network.cpp  freebsd-network.hpp  manager.cpp  manager.hpp  modem.cpp  modem.hpp  network-backend.hpp  network-widget.cpp  network-widget.hpp  network.cpp  network.hpp  null.hpp  settings.cpp  settings.hpp  vpn.hpp  wifi-ap.cpp  wifi-ap.hpp  wifi.cpp  wifi.hpp  wired.cpp  wired.hpp
subprojects/: owf.wrap  yyjson.wrap
tests/: audio-backend-test.cpp  meson.build  network-backend-test.cpp  power-controller-test.cpp
