option(
    'pulse',
    type: 'feature',
    value: 'auto',
    description: 'Build pulseaudio volume widget',
)
option(
    'pipewire',
    type: 'feature',
    value: 'auto',
    description: 'Build wireplumber mixer widget',
)
option(
    'wayland-logout',
    type: 'boolean',
    value: true,
    description: 'Install wayland-logout',
)
