option(
    'volume-widget',
    type: 'feature',
    value: 'auto',
    description: 'Build pulseaudio volume widget',
)
option(
    'wp-mixer-widget',
    type: 'feature',
    value: 'auto',
    description: 'Build wireplumber mixer widget',
)
option(
    'wayland-logout',
    type: 'boolean',
    value: true,
    description: 'Install wayland-logout',
)
option(
    'weather',
    type: 'boolean',
    value: false,
    description: 'Install weather widgets and open-weather-fetch systemd service',
)
