install_data('wayfire.png', install_dir: icon_dir)
install_data('wallpaper.jpg', install_dir: resource_dir)

install_data(join_paths('48x48', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '48x48', 'apps'))
install_data(join_paths('64x64', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '64x64', 'apps'))
install_data(join_paths('72x72', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '72x72', 'apps'))
install_data(join_paths('96x96', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '96x96', 'apps'))
install_data(join_paths('128x128', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '128x128', 'apps'))
install_data(join_paths('160x160', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '160x160', 'apps'))
install_data(join_paths('192x192', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '192x192', 'apps')
install_data(join_paths('256x256', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '256x256', 'apps')
install_data(join_paths('512x512', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '512x512', 'apps')
