background_dir = join_paths(get_option('prefix'), 'share', 'wf-shell', 'backgrounds')

install_data(join_paths('backgrounds','calm-blue.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','circuits.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','secret-chest.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','simple.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','simple-2.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','snow.png'), install_dir: background_dir)
install_data(join_paths('backgrounds','wallpaper.jpg'), install_dir: background_dir)

install_data('wayfire.png', install_dir: icon_dir)
install_data('wf-locker-pin.desktop', install_dir: join_paths(get_option('prefix'), 'share', 'applications'))

install_data(join_paths('icons', '48x48', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '48x48', 'apps'))
install_data(join_paths('icons', '64x64', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '64x64', 'apps'))
install_data(join_paths('icons', '72x72', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '72x72', 'apps'))
install_data(join_paths('icons', '96x96', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '96x96', 'apps'))
install_data(join_paths('icons', '128x128', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '128x128', 'apps'))
install_data(join_paths('icons', '160x160', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '160x160', 'apps'))
install_data(join_paths('icons', '192x192', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '192x192', 'apps'))
install_data(join_paths('icons', '256x256', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '256x256', 'apps'))
install_data(join_paths('icons', '512x512', 'wayfire.png'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', '512x512', 'apps'))
install_data(join_paths('icons', 'scalable', 'wayfire.svg'), install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'hicolor', 'scalable', 'apps'))

install_data('wf-locker', install_dir:'/etc/pam.d/')

install_data('xdpw/wayfire', install_dir: '/etc/xdg/xdg-desktop-portal-wlr/')

install_data(join_paths('layouts', 'ansi.xml'), install_dir: layout_dir)
install_data(join_paths('layouts', 'iso.xml'), install_dir: layout_dir)
install_data(join_paths('layouts', 'emoji.xml'), install_dir: layout_dir)
install_data(join_paths('layouts', 'ether.xml'), install_dir: layout_dir)
install_data(join_paths('layouts', 'numpad.xml'), install_dir: layout_dir)

subdir('css')
