css_path = join_paths(resource_dir, 'css')

install_data('default.css', install_dir: css_path)
install_data('panel-battery-zoom-hover.css', install_dir: css_path)
install_data('panel-launchers-zoom-hover.css', install_dir: css_path)
install_data('panel-menu-button-small.css', install_dir: css_path)
install_data('panel-menu-zoom-hover.css', install_dir: css_path)
install_data('panel-network-zoom-hover.css', install_dir: css_path)
install_data('panel-selectors.css', install_dir: css_path)
install_data('panel-tray-zoom-hover.css', install_dir: css_path)
install_data('panel-volume-zoom-hover.css', install_dir: css_path)
install_data('panel-window-list-zoom-hover.css', install_dir: css_path)
install_data('user-font.css', install_dir: css_path)